<resources>
    <string name="app_name">Snippet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Log Off</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Snippet</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="Login">Login</string>
    <string name="btnShare">Share</string>
    <string name="btnComment">Comment</string>
    <string name="btnLike">Like</string>
    <string name="app_subject">Snippet Application</string>
    <string name="app_description">Welcome to the Snippet app where you cann upload and share your photoes with all the users</string>
    <string name="tvThanks">Thanks to Tomer Buzaglo it was an awesome course, Hope to meet again in another course. Yevgniy Shvartsman.</string>
</resources>
