<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFD7D7D7"
    android:padding="10dp"
    tools:context=".fragments.AboutFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="30dp"
        android:text="@string/app_subject"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvDescriptionSnippet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView"
        android:paddingBottom="10dp"
        android:text="@string/app_description"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/tvDescriptionSnippet"
        android:text="@string/tvThanks"/>
</RelativeLayout>
